--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -206,9 +206,28 @@
 
 /* ---- Inline text input ---- */
 
-.ifw-text-field {
-  display: inline-block;
+.ifw-text-field-wrap {
+  display: inline-grid;
   vertical-align: baseline;
+  min-width: 3ch;
+}
+
+.ifw-text-field-wrap > * {
+  grid-area: 1 / 1;
+  font: inherit;
+  font-weight: 300;
+  padding: 0 0 4px 0;
+  border-bottom: 3px solid transparent;
+  line-height: 1.2;
+}
+
+.ifw-text-field-sizer {
+  visibility: hidden;
+  white-space: pre;
+}
+
+.ifw-text-field {
+  width: 100%;
   font-family: inherit;
   font-size: inherit;
   font-weight: 300;
